# DPG-RPS

./: .flake8  .gitignore  README.md  RPS.py  dodo.py  pyproject.toml  requirements.txt  server.py  spec.md  workspace.code-workspace
.github/: PULL_REQUEST_TEMPLATE.md
docs/src/: index.html  main.html
docs/src/client/: client.html  gui.html  index.html  main.html
docs/src/launcher/: gui.html  index.html  launcher.html  main.html
docs/src/server/: fastapi.html  game.html  index.html  main.html  server.html
src/: gui.py  main.py  obj.py
src/client/: __init__.py  client.py  gui.py
src/launcher/: __init__.py  gui.py  launcher.py  tui.py
src/server/: __init__.py  fastapi.py  game.py  main.py  server.py
