[tool.poetry]
name = "dpg-rps"
version = "0.1.0"
description = "Rock, Paper, Sockets!"
authors = ["cubic-unit <cadenblox@gmail.com>, Jah-On <>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
dearpygui = "^0.6.18"
fastapi = "^0.62.0"
uvicorn = "^0.12.3"
pydantic = "^1.7.3"
requests = "^2.25.0"
python-dotenv = "^0.15.0"
click = "^7.1.2"
prompt-toolkit = "^3.0.8"


[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"
rope = "^0.18.0"
PySnooper = "^0.4.2"
pdoc3 = "^0.9.2"
doit = "^0.33.1"
commitizen = "^2.10.0"
pydantic = "^1.7.3"
ipykernel = "^5.3.4"
pretty-errors = "^1.2.19"

[tool.poetry.scripts]
# TODO: This is non-functional! Why???

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
